--- a/blog-subsi/package.json
+++ b/blog-subsi/package.json
@@ -5,9 +5,11 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.10.2",
     "gatsby-image": "^2.2.39",
+    "gatsby-plugin-algolia-search": "^0.5.0",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
