--- a/blog-subsi/package.json
+++ b/blog-subsi/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "algoliasearch": "^4.1.0",
     "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.10.2",
@@ -27,6 +28,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-instantsearch-dom": "^6.4.0",
     "styled-components": "^5.0.1",
     "styled-icons": "^10.2.1"
   },
