--- a/blog-subsi/package.json
+++ b/blog-subsi/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.5.3",
     "gatsby-plugin-styled-components": "^3.1.19",
+    "gatsby-plugin-transition-link": "^1.18.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-remark-images": "^3.1.50",
     "gatsby-remark-lazy-load": "^1.0.2",
@@ -28,6 +29,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-ga": "^2.7.0",
     "react-helmet": "^5.2.1",
     "react-instantsearch-dom": "^6.4.0",
     "styled-components": "^5.0.1",
